hphp/hack/test/typecheck/colon_on_case_label.php.exp
File "colon_on_case_label.php", line 6, characters 11-11:
A colon (':') is expected here. (Parsing[1002])
