hphp/hack/test/typecheck/colon_on_case_label.php
<?hh // partial

function foo($x): void {

  switch ($x) {
    case 1;
      echo "hi";
      break;
    default:
      echo "bye";
  }
}

foo(1);
